--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
         <td class="no-of-notes"></td>
         <td class="no-of-notes" ></td>
         <td class="no-of-notes"></td>
+        <td class="no-of-notes" ></td>
+        <td class="no-of-notes"></td>
 
     </tr>
     <tr>
@@ -36,7 +38,9 @@
         <td>500</td>
         <td>100</td>
         <td>50</td>
+        <td>20</td>
         <td>10</td>
+        <td>5</td>
         <td>1</td>
         
     </tr>
