update-text-number

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <h1 class="heading-2">Cash Register Manager</h1>
     <p class="described">Enter the bill amount and cash given by the customer and know minimum number of notes to return.</p>
     <label class="heading-3" for="billamt">Bill Amount</label>
-    <input  id="billamt" type="text">
+    <input  id="billamt" type="number">
     <label class="heading-3" for="givencash">Cash Given</label>
-    <input id="givencash" type="text">
+    <input id="givencash" type="number">
     <button id="buttoncheck">CHECK</button>
     <p id="errormessage"></p>
     <table class="table-changes">
